# iac

./: .envrc  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Pulumi.github.prod.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
.github/actions/prepare-repo/: action.yml
.github/workflows/: linters.yaml  preview-github.yaml  pulumi.yml  update-github.yaml
flux/apps/demo/: deployment.yaml  kustomization.yaml
flux/clusters/minikube/flux-system/: gotk-sync.yaml
iac/github/: config.py  github.py
